@@ -17,68 +17,145 @@
  */
 package org.apache.cassandra.io.util;
 
-import java.io.*;
+import java.io.BufferedWriter;
+import java.io.Closeable;
+import java.io.IOException;
+import java.io.OutputStreamWriter;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
+import java.lang.reflect.Method;
 import java.nio.ByteBuffer;
+import java.nio.channels.Channels;
+import java.nio.channels.ClosedChannelException;
 import java.nio.channels.FileChannel;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.*;
-import java.nio.file.attribute.FileAttributeView;
-import java.nio.file.attribute.FileStoreAttributeView;
+import java.nio.file.DirectoryNotEmptyException;
+import java.nio.file.FileVisitResult;
+import java.nio.file.Files;
+import java.nio.file.NoSuchFileException;
+import java.nio.file.Path;
+import java.nio.file.SimpleFileVisitor;
+import java.nio.file.StandardCopyOption;
+import java.nio.file.StandardOpenOption;
+import java.nio.file.attribute.BasicFileAttributes;
 import java.text.DecimalFormat;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.EnumSet;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.Consumer;
-import java.util.function.Predicate;
-import java.util.stream.StreamSupport;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+import com.google.common.base.Preconditions;
+import com.google.common.util.concurrent.RateLimiter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.nio.ch.DirectBuffer;
 
-import org.apache.cassandra.concurrent.ScheduledExecutors;
 import org.apache.cassandra.io.FSError;
-import org.apache.cassandra.io.FSErrorHandler;
-import org.apache.cassandra.io.FSReadError;
 import org.apache.cassandra.io.FSWriteError;
-import org.apache.cassandra.io.sstable.CorruptSSTableException;
 import org.apache.cassandra.utils.JVMStabilityInspector;
+import org.apache.cassandra.utils.SyncUtil;
 
-import static com.google.common.base.Throwables.propagate;
+import static org.apache.cassandra.config.CassandraRelevantProperties.JAVA_IO_TMPDIR;
 import static org.apache.cassandra.utils.Throwables.maybeFail;
-import static org.apache.cassandra.utils.Throwables.merge;
 
 public final class FileUtils
 {
     public static final Charset CHARSET = StandardCharsets.UTF_8;
 
     private static final Logger logger = LoggerFactory.getLogger(FileUtils.class);
-    public static final long ONE_KB = 1024;
-    public static final long ONE_MB = 1024 * ONE_KB;
-    public static final long ONE_GB = 1024 * ONE_MB;
-    public static final long ONE_TB = 1024 * ONE_GB;
+
+    public static final long ONE_KIB = 1024;
+    public static final long ONE_MIB = 1024 * ONE_KIB;
+    public static final long ONE_GIB = 1024 * ONE_MIB;
+    public static final long ONE_TIB = 1024 * ONE_GIB;
 
     private static final DecimalFormat df = new DecimalFormat("#.##");
-    private static final boolean canCleanDirectBuffers;
-    private static final AtomicReference<FSErrorHandler> fsErrorHandler = new AtomicReference<>();
+
+    private static final Class clsDirectBuffer;
+    private static final MethodHandle mhDirectBufferCleaner;
+    private static final MethodHandle mhCleanerClean;
 
     static
     {
-        boolean canClean = false;
         try
         {
+            clsDirectBuffer = Class.forName("sun.nio.ch.DirectBuffer");
+            Method mDirectBufferCleaner = clsDirectBuffer.getMethod("cleaner");
+            mhDirectBufferCleaner = MethodHandles.lookup().unreflect(mDirectBufferCleaner);
+            Method mCleanerClean = mDirectBufferCleaner.getReturnType().getMethod("clean");
+            mhCleanerClean = MethodHandles.lookup().unreflect(mCleanerClean);
+
             ByteBuffer buf = ByteBuffer.allocateDirect(1);
-            ((DirectBuffer) buf).cleaner().clean();
-            canClean = true;
+            clean(buf);
+        }
+        catch (IllegalAccessException e)
+        {
+            logger.error("FATAL: Cassandra is unable to access required classes. This usually means it has been " +
+                "run without the aid of the standard startup scripts or the scripts have been edited. If this was " +
+                "intentional, and you are attempting to use Java 11+ you may need to add the --add-exports and " +
+                "--add-opens jvm options from either jvm11-server.options or jvm11-client.options", e);
+            throw new RuntimeException(e);  // causes ExceptionInInitializerError, will prevent startup
         }
         catch (Throwable t)
         {
-            logger.error("Cannot initialize un-mmaper.  (Are you using a non-Oracle JVM?)  Compacted data files will not be removed promptly.  Consider using an Oracle JVM or using standard disk access mode", t);
+            logger.error("FATAL: Cannot initialize optimized memory deallocator.", t);
             JVMStabilityInspector.inspectThrowable(t);
+            throw new RuntimeException(t); // causes ExceptionInInitializerError, will prevent startup
         }
-        canCleanDirectBuffers = canClean;
+    }
+
+    private static final File tempDir = new File(JAVA_IO_TMPDIR.getString());
+    private static final AtomicLong tempFileNum = new AtomicLong();
+
+    public static File getTempDir()
+    {
+        return tempDir;
+    }
+
+    /**
+     * Pretty much like {@link java.io.File#createTempFile(String, String, java.io.File)}, but with
+     * the guarantee that the "random" part of the generated file name between
+     * {@code prefix} and {@code suffix} is a positive, increasing {@code long} value.
+     */
+    public static File createTempFile(String prefix, String suffix, File directory)
+    {
+        // Do not use java.io.File.createTempFile(), because some tests rely on the
+        // behavior that the "random" part in the temp file name is a positive 'long'.
+        // However, at least since Java 9 the code to generate the "random" part
+        // uses an _unsigned_ random long generated like this:
+        // Long.toUnsignedString(new java.util.Random.nextLong())
+
+        while (true)
+        {
+            // The contract of File.createTempFile() says, that it must not return
+            // the same file name again. We do that here in a very simple way,
+            // that probably doesn't cover all edge cases. Just rely on system
+            // wall clock and return strictly increasing values from that.
+            long num = tempFileNum.getAndIncrement();
+
+            // We have a positive long here, which is safe to use for example
+            // for CommitLogTest.
+            String fileName = prefix + num + suffix;
+            File candidate = new File(directory, fileName);
+            if (candidate.createFileIfNotExists())
+                return candidate;
+        }
+    }
+
+    public static File createTempFile(String prefix, String suffix)
+    {
+        return createTempFile(prefix, suffix, tempDir);
+    }
+
+    public static File createDeletableTempFile(String prefix, String suffix)
+    {
+        File f = createTempFile(prefix, suffix, getTempDir());
+        f.deleteOnExit();
+        return f;
     }
 
     public static void createHardLink(String from, String to)
@@ -89,7 +166,7 @@ public final class FileUtils
     public static void createHardLink(File from, File to)
     {
         if (to.exists())
-            throw new RuntimeException("Tried to create duplicate hard link to " + to);
+            throw new DuplicateHardlinkException("Tried to create duplicate hard link from " + from + " to " + to);
         if (!from.exists())
             throw new RuntimeException("Tried to hard link to file that does not exist " + from);
 
@@ -103,124 +180,98 @@ public final class FileUtils
         }
     }
 
-    public static File createTempFile(String prefix, String suffix, File directory)
+    public static void createHardLinkWithConfirm(String from, String to)
+    {
+        createHardLinkWithConfirm(new File(from), new File(to));
+    }
+
+    public static void createHardLinkWithConfirm(File from, File to)
     {
         try
         {
-            return File.createTempFile(prefix, suffix, directory);
+            createHardLink(from, to);
         }
-        catch (IOException e)
+        catch (FSWriteError ex)
         {
-            throw new FSWriteError(e, directory);
+            throw ex;
         }
-    }
-
-    public static File createTempFile(String prefix, String suffix)
-    {
-        return createTempFile(prefix, suffix, new File(System.getProperty("java.io.tmpdir")));
-    }
-
-    public static Throwable deleteWithConfirm(String filePath, boolean expect, Throwable accumulate)
-    {
-        return deleteWithConfirm(new File(filePath), expect, accumulate);
-    }
-
-    public static Throwable deleteWithConfirm(File file, boolean expect, Throwable accumulate)
-    {
-        boolean exists = file.exists();
-        assert exists || !expect : "attempted to delete non-existing file " + file.getName();
-        try
+        catch (DuplicateHardlinkException ex)
         {
-            if (exists)
-                Files.delete(file.toPath());
+            throw new RuntimeException(ex.getMessage());
         }
         catch (Throwable t)
         {
-            try
-            {
-                throw new FSWriteError(t, file);
-            }
-            catch (Throwable t2)
-            {
-                accumulate = merge(accumulate, t2);
-            }
+            throw new RuntimeException(String.format("Unable to hardlink from %s to %s", from, to), t);
         }
-        return accumulate;
     }
 
-    public static void deleteWithConfirm(String file)
+    public static void createHardLinkWithoutConfirm(String from, String to)
     {
-        deleteWithConfirm(new File(file));
+        createHardLinkWithoutConfirm(new File(from), new File(to));
     }
 
-    public static void deleteWithConfirm(File file)
-    {
-        maybeFail(deleteWithConfirm(file, true, null));
-    }
-
-    public static void renameWithOutConfirm(String from, String to)
+    public static void createHardLinkWithoutConfirm(File from, File to)
     {
         try
         {
-            atomicMoveWithFallback(new File(from).toPath(), new File(to).toPath());
+            createHardLink(from, to);
+        }
+        catch (FSWriteError fse)
+        {
+            if (logger.isTraceEnabled())
+                logger.trace("Could not hardlink file {} to {}", from, to, fse);
+        }
+    }
+
+    public static void copyWithOutConfirm(String from, String to)
+    {
+        copyWithOutConfirm(new File(from), new File(to));
+    }
+
+    public static void copyWithOutConfirm(File from, File to)
+    {
+        try
+        {
+            Files.copy(from.toPath(), to.toPath());
         }
         catch (IOException e)
         {
             if (logger.isTraceEnabled())
-                logger.trace("Could not move file "+from+" to "+to, e);
+                logger.trace("Could not copy file {} to {}", from, to, e);
         }
     }
 
-    public static void renameWithConfirm(String from, String to)
+    public static void copyWithConfirm(String from, String to)
     {
-        renameWithConfirm(new File(from), new File(to));
+        copyWithConfirm(new File(from), new File(to));
     }
 
-    public static void renameWithConfirm(File from, File to)
+    public static void copyWithConfirm(File from, File to)
     {
         assert from.exists();
         if (logger.isTraceEnabled())
-            logger.trace((String.format("Renaming %s to %s", from.getPath(), to.getPath())));
-        // this is not FSWE because usually when we see it it's because we didn't close the file before renaming it,
-        // and Windows is picky about that.
+            logger.trace("Copying {} to {}", from.path(), to.path());
+
         try
         {
-            atomicMoveWithFallback(from.toPath(), to.toPath());
+            Files.copy(from.toPath(), to.toPath());
         }
         catch (IOException e)
         {
-            throw new RuntimeException(String.format("Failed to rename %s to %s", from.getPath(), to.getPath()), e);
+            throw new FSWriteError(e, "Could not copy file" + from + " to " + to);
         }
     }
 
-    /**
-     * Move a file atomically, if it fails, it falls back to a non-atomic operation
-     * @param from
-     * @param to
-     * @throws IOException
-     */
-    private static void atomicMoveWithFallback(Path from, Path to) throws IOException
-    {
-        try
-        {
-            Files.move(from, to, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.ATOMIC_MOVE);
-        }
-        catch (AtomicMoveNotSupportedException e)
-        {
-            logger.trace("Could not do an atomic move", e);
-            Files.move(from, to, StandardCopyOption.REPLACE_EXISTING);
-        }
-
-    }
     public static void truncate(String path, long size)
     {
-        try(FileChannel channel = FileChannel.open(Paths.get(path), StandardOpenOption.READ, StandardOpenOption.WRITE))
+        File file = new File(path);
+        try (FileChannel channel = file.newReadWriteChannel())
         {
             channel.truncate(size);
         }
         catch (IOException e)
         {
-            throw new RuntimeException(e);
+            throw PathUtils.propagateUnchecked(e, file.toPath(), true);
         }
     }
 
@@ -293,210 +344,127 @@ public final class FileUtils
 
     public static String getCanonicalPath(String filename)
     {
-        try
-        {
-            return new File(filename).getCanonicalPath();
-        }
-        catch (IOException e)
-        {
-            throw new FSReadError(e, filename);
-        }
+        return new File(filename).canonicalPath();
     }
 
     public static String getCanonicalPath(File file)
     {
-        try
-        {
-            return file.getCanonicalPath();
-        }
-        catch (IOException e)
-        {
-            throw new FSReadError(e, file);
-        }
+        return file.canonicalPath();
     }
 
     /** Return true if file is contained in folder */
     public static boolean isContained(File folder, File file)
     {
-        Path folderPath = Paths.get(getCanonicalPath(folder));
-        Path filePath = Paths.get(getCanonicalPath(file));
-
-        return filePath.startsWith(folderPath);
-    }
-
-    /** Convert absolute path into a path relative to the base path */
-    public static String getRelativePath(String basePath, String path)
-    {
-        try
-        {
-            return Paths.get(basePath).relativize(Paths.get(path)).toString();
-        }
-        catch(Exception ex)
-        {
-            String absDataPath = FileUtils.getCanonicalPath(basePath);
-            return Paths.get(absDataPath).relativize(Paths.get(path)).toString();
-        }
-    }
-
-    public static boolean isCleanerAvailable()
-    {
-        return canCleanDirectBuffers;
+        return folder.isAncestorOf(file);
     }
 
     public static void clean(ByteBuffer buffer)
     {
-        if (isCleanerAvailable() && buffer.isDirect())
-        {
-            DirectBuffer db = (DirectBuffer) buffer;
-            if (db.cleaner() != null)
-                db.cleaner().clean();
-        }
-    }
-
-    public static void createDirectory(String directory)
-    {
-        createDirectory(new File(directory));
-    }
-
-    public static void createDirectory(File directory)
-    {
-        if (!directory.exists())
-        {
-            if (!directory.mkdirs())
-                throw new FSWriteError(new IOException("Failed to mkdirs " + directory), directory);
-        }
-    }
-
-    public static boolean delete(String file)
-    {
-        File f = new File(file);
-        return f.delete();
-    }
-
-    public static void delete(File... files)
-    {
-        if (files == null)
-        {
-            // CASSANDRA-13389: some callers use Files.listFiles() which, on error, silently returns null
-            logger.debug("Received null list of files to delete");
+        if (buffer == null || !buffer.isDirect())
             return;
-        }
 
-        for ( File file : files )
-        {
-            file.delete();
-        }
-    }
+        // TODO Once we can get rid of Java 8, it's simpler to call sun.misc.Unsafe.invokeCleaner(ByteBuffer),
+        // but need to take care of the attachment handling (i.e. whether 'buf' is a duplicate or slice) - that
+        // is different in sun.misc.Unsafe.invokeCleaner and this implementation.
 
-    public static void deleteAsync(final String file)
-    {
-        Runnable runnable = new Runnable()
+        try
         {
-            public void run()
+            Object cleaner = mhDirectBufferCleaner.bindTo(buffer).invoke();
+            if (cleaner != null)
             {
-                deleteWithConfirm(new File(file));
+                // ((DirectBuffer) buf).cleaner().clean();
+                mhCleanerClean.bindTo(cleaner).invoke();
             }
-        };
-        ScheduledExecutors.nonPeriodicTasks.execute(runnable);
+        }
+        catch (RuntimeException e)
+        {
+            throw e;
+        }
+        catch (Throwable e)
+        {
+            throw new RuntimeException(e);
+        }
     }
 
-    public static void visitDirectory(Path dir, Predicate<? super File> filter, Consumer<? super File> consumer)
+    public static long parseFileSize(String value)
     {
-        try (DirectoryStream<Path> stream = Files.newDirectoryStream(dir))
+        long result;
+        if (!value.matches("\\d+(\\.\\d+)? (GiB|KiB|MiB|TiB|bytes)"))
         {
-            StreamSupport.stream(stream.spliterator(), false)
-                         .map(Path::toFile)
-                         // stream directories are weakly consistent so we always check if the file still exists
-                         .filter(f -> f.exists() && (filter == null || filter.test(f)))
-                         .forEach(consumer);
+            throw new IllegalArgumentException(
+                String.format("value %s is not a valid human-readable file size", value));
         }
-        catch (IOException|DirectoryIteratorException ex)
+        if (value.endsWith(" TiB"))
         {
-            logger.error("Failed to list files in {} with exception: {}", dir, ex.getMessage(), ex);
+            result = Math.round(Double.valueOf(value.replace(" TiB", "")) * ONE_TIB);
+            return result;
         }
+        else if (value.endsWith(" GiB"))
+        {
+            result = Math.round(Double.valueOf(value.replace(" GiB", "")) * ONE_GIB);
+            return result;
+        }
+        else if (value.endsWith(" KiB"))
+        {
+            result = Math.round(Double.valueOf(value.replace(" KiB", "")) * ONE_KIB);
+            return result;
+        }
+        else if (value.endsWith(" MiB"))
+        {
+            result = Math.round(Double.valueOf(value.replace(" MiB", "")) * ONE_MIB);
+            return result;
+        }
+        else if (value.endsWith(" bytes"))
+        {
+            result = Math.round(Double.valueOf(value.replace(" bytes", "")));
+            return result;
+        }
+        else
+        {
+            throw new IllegalStateException(String.format("FileUtils.parseFileSize() reached an illegal state parsing %s", value));
+        }
+    }
+
+    public static String stringifyFileSize(long bytes, boolean humanReadable)
+    {
+        if (humanReadable)
+            return stringifyFileSize(bytes);
+        else
+            return Long.toString(bytes);
     }
 
     public static String stringifyFileSize(double value)
     {
         double d;
-        if ( value >= ONE_TB )
+        if (value >= ONE_TIB)
         {
-            d = value / ONE_TB;
+            d = value / ONE_TIB;
             String val = df.format(d);
-            return val + " TB";
+            return val + " TiB";
         }
-        else if ( value >= ONE_GB )
+        else if (value >= ONE_GIB)
         {
-            d = value / ONE_GB;
+            d = value / ONE_GIB;
             String val = df.format(d);
-            return val + " GB";
+            return val + " GiB";
         }
-        else if ( value >= ONE_MB )
+        else if (value >= ONE_MIB)
         {
-            d = value / ONE_MB;
+            d = value / ONE_MIB;
             String val = df.format(d);
-            return val + " MB";
+            return val + " MiB";
         }
-        else if ( value >= ONE_KB )
+        else if (value >= ONE_KIB)
         {
-            d = value / ONE_KB;
+            d = value / ONE_KIB;
             String val = df.format(d);
-            return val + " KB";
+            return val + " KiB";
         }
         else
         {
             String val = df.format(value);
             return val + " bytes";
         }
-    }
-
-    /**
-     * Deletes all files and subdirectories under "dir".
-     * @param dir Directory to be deleted
-     * @throws FSWriteError if any part of the tree cannot be deleted
-     */
-    public static void deleteRecursive(File dir)
-    {
-        if (dir.isDirectory())
-        {
-            String[] children = dir.list();
-            for (String child : children)
-                deleteRecursive(new File(dir, child));
-        }
-
-        // The directory is now empty so now it can be smoked
-        deleteWithConfirm(dir);
-    }
-
-    /**
-     * Schedules deletion of all file and subdirectories under "dir" on JVM shutdown.
-     * @param dir Directory to be deleted
-     */
-    public static void deleteRecursiveOnExit(File dir)
-    {
-        if (dir.isDirectory())
-        {
-            String[] children = dir.list();
-            for (String child : children)
-                deleteRecursiveOnExit(new File(dir, child));
-        }
-
-        logger.trace("Scheduling deferred deletion of file: " + dir);
-        dir.deleteOnExit();
-    }
-
-    public static void handleCorruptSSTable(CorruptSSTableException e)
-    {
-        FSErrorHandler handler = fsErrorHandler.get();
-        if (handler != null)
-            handler.handleCorruptSSTable(e);
-    }
-
-    public static void handleFSError(FSError e)
-    {
-        FSErrorHandler handler = fsErrorHandler.get();
-        if (handler != null)
-            handler.handleFSError(e);
     }
 
     /**
@@ -510,60 +478,46 @@ public final class FileUtils
     public static void handleFSErrorAndPropagate(FSError e)
     {
         JVMStabilityInspector.inspectThrowable(e);
-        throw propagate(e);
+        throw e;
     }
 
     /**
      * Get the size of a directory in bytes
-     * @param directory The directory for which we need size.
+     * @param folder The directory for which we need size.
      * @return The size of the directory
      */
-    public static long folderSize(File directory)
+    public static long folderSize(File folder)
     {
-        long length = 0;
-        for (File file : directory.listFiles())
+        if (!folder.exists())
+            return 0;
+
+        final long [] sizeArr = {0L};
+        try
         {
-            if (file.isFile())
-                length += file.length();
-            else
-                length += folderSize(file);
+            Files.walkFileTree(folder.toPath(), new SimpleFileVisitor<Path>()
+            {
+                @Override
+                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs)
+                {
+                    sizeArr[0] += attrs.size();
+                    return FileVisitResult.CONTINUE;
+                }
+
+                @Override
+                public FileVisitResult visitFileFailed(Path path, IOException e) throws IOException
+                {
+                    if (e instanceof NoSuchFileException)
+                        return FileVisitResult.CONTINUE;
+                    else
+                        throw e;
+                }
+            });
         }
-        return length;
-    }
-
-    public static void copyTo(DataInput in, OutputStream out, int length) throws IOException
-    {
-        byte[] buffer = new byte[64 * 1024];
-        int copiedBytes = 0;
-
-        while (copiedBytes + buffer.length < length)
+        catch (IOException e)
         {
-            in.readFully(buffer);
-            out.write(buffer);
-            copiedBytes += buffer.length;
+            logger.error("Error while getting {} folder size. {}", folder, e.getMessage());
         }
-
-        if (copiedBytes < length)
-        {
-            int left = length - copiedBytes;
-            in.readFully(buffer, 0, left);
-            out.write(buffer, 0, left);
-        }
-    }
-
-    public static boolean isSubDirectory(File parent, File child) throws IOException
-    {
-        parent = parent.getCanonicalFile();
-        child = child.getCanonicalFile();
-
-        File toCheck = child;
-        while (toCheck != null)
-        {
-            if (parent.equals(toCheck))
-                return true;
-            toCheck = toCheck.getParentFile();
-        }
-        return false;
+        return sizeArr[0];
     }
 
     public static void append(File file, String ... lines)
@@ -587,18 +541,57 @@ public final class FileUtils
         write(file, Arrays.asList(lines), StandardOpenOption.TRUNCATE_EXISTING);
     }
 
+    /**
+     * Write lines to a file adding a newline to the end of each supplied line using the provided open options.
+     *
+     * If open option sync or dsync is provided this will not open the file with sync or dsync since it might end up syncing
+     * many times for a lot of lines. Instead it will write all the lines and sync once at the end. Since the file is
+     * never returned there is not much difference from the perspective of the caller.
+     * @param file
+     * @param lines
+     * @param options
+     */
     public static void write(File file, List<String> lines, StandardOpenOption ... options)
     {
-        try
+        Set<StandardOpenOption> optionsSet = EnumSet.noneOf(StandardOpenOption.class);
+        for (StandardOpenOption option : options)
+            optionsSet.add(option);
+
+        //Emulate the old FileSystemProvider.newOutputStream behavior for open options.
+        if (optionsSet.isEmpty())
         {
-            Files.write(file.toPath(),
-                        lines,
-                        CHARSET,
-                        options);
+            optionsSet.add(StandardOpenOption.CREATE);
+            optionsSet.add(StandardOpenOption.TRUNCATE_EXISTING);
+        }
+        boolean sync = optionsSet.remove(StandardOpenOption.SYNC);
+        boolean dsync = optionsSet.remove(StandardOpenOption.DSYNC);
+        optionsSet.add(StandardOpenOption.WRITE);
+
+        Path filePath = file.toPath();
+        try (FileChannel fc = filePath.getFileSystem().provider().newFileChannel(filePath, optionsSet);
+             BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(Channels.newOutputStream(fc), CHARSET.newEncoder())))
+        {
+            for (CharSequence line: lines) {
+                writer.append(line);
+                writer.newLine();
+            }
+
+            if (sync)
+            {
+                SyncUtil.force(fc, true);
+            }
+            else if (dsync)
+            {
+                SyncUtil.force(fc, false);
+            }
+        }
+        catch (ClosedChannelException cce)
+        {
+            throw new RuntimeException(cce);
         }
         catch (IOException ex)
         {
-            throw new RuntimeException(ex);
+            throw new FSWriteError(ex, file);
         }
     }
 
@@ -617,75 +610,127 @@ public final class FileUtils
         }
     }
 
-    public static void setFSErrorHandler(FSErrorHandler handler)
+    /** @deprecated See CASSANDRA-16926 */
+    @Deprecated(since = "4.1")
+    public static void createDirectory(String directory)
     {
-        fsErrorHandler.getAndSet(handler);
+        createDirectory(new File(directory));
+    }
+
+    /** @deprecated See CASSANDRA-16926 */
+    @Deprecated(since = "4.1")
+    public static void createDirectory(File directory)
+    {
+        PathUtils.createDirectoriesIfNotExists(directory.toPath());
+    }
+
+    /** @deprecated See CASSANDRA-16926 */
+    @Deprecated(since = "4.1")
+    public static boolean delete(String file)
+    {
+        return new File(file).tryDelete();
+    }
+
+    /** @deprecated See CASSANDRA-16926 */
+    @Deprecated(since = "4.1")
+    public static void delete(File... files)
+    {
+        for (File file : files)
+            file.tryDelete();
     }
 
     /**
-     * Returns the size of the specified partition.
-     * <p>This method handles large file system by returning {@code Long.MAX_VALUE} if the  size overflow.
-     * See <a href='https://bugs.openjdk.java.net/browse/JDK-8179320'>JDK-8179320</a> for more information.</p>
+     * Deletes all files and subdirectories under "dir".
+     * @param dir Directory to be deleted
+     * @throws FSWriteError if any part of the tree cannot be deleted
      *
-     * @param file the partition
-     * @return the size, in bytes, of the partition or {@code 0L} if the abstract pathname does not name a partition
+     * @deprecated See CASSANDRA-16926
      */
-    public static long getTotalSpace(File file)
+    @Deprecated(since = "4.1")
+    public static void deleteRecursiveWithThrottle(File dir, RateLimiter rateLimiter)
     {
-        return handleLargeFileSystem(file.getTotalSpace());
+        dir.deleteRecursive(rateLimiter);
     }
 
     /**
-     * Returns the number of unallocated bytes on the specified partition.
-     * <p>This method handles large file system by returning {@code Long.MAX_VALUE} if the  number of unallocated bytes
-     * overflow. See <a href='https://bugs.openjdk.java.net/browse/JDK-8179320'>JDK-8179320</a> for more information</p>
+     * Deletes all files and subdirectories under "dir".
+     * @param dir Directory to be deleted
+     * @throws FSWriteError if any part of the tree cannot be deleted
      *
-     * @param file the partition
-     * @return the number of unallocated bytes on the partition or {@code 0L}
-     * if the abstract pathname does not name a partition.
+     * @deprecated See CASSANDRA-16926
      */
-    public static long getFreeSpace(File file)
+    @Deprecated(since = "4.1")
+    public static void deleteRecursive(File dir)
     {
-        return handleLargeFileSystem(file.getFreeSpace());
+        dir.deleteRecursive();
     }
 
     /**
-     * Returns the number of available bytes on the specified partition.
-     * <p>This method handles large file system by returning {@code Long.MAX_VALUE} if the  number of available bytes
-     * overflow. See <a href='https://bugs.openjdk.java.net/browse/JDK-8179320'>JDK-8179320</a> for more information</p>
+     * Schedules deletion of all file and subdirectories under "dir" on JVM shutdown.
+     * @param dir Directory to be deleted
      *
-     * @param file the partition
-     * @return the number of available bytes on the partition or {@code 0L}
-     * if the abstract pathname does not name a partition.
+     * @deprecated See CASSANDRA-16926
      */
-    public static long getUsableSpace(File file)
+    @Deprecated(since = "4.1")
+    public static void deleteRecursiveOnExit(File dir)
     {
-        return handleLargeFileSystem(file.getUsableSpace());
+        dir.deleteRecursiveOnExit();
     }
 
-    /**
-     * Returns the {@link FileStore} representing the file store where a file
-     * is located. This {@link FileStore} handles large file system by returning {@code Long.MAX_VALUE}
-     * from {@code FileStore#getTotalSpace()}, {@code FileStore#getUnallocatedSpace()} and {@code FileStore#getUsableSpace()}
-     * it the value is bigger than {@code Long.MAX_VALUE}. See <a href='https://bugs.openjdk.java.net/browse/JDK-8162520'>JDK-8162520</a>
-     * for more information.
-     *
-     * @param path the path to the file
-     * @return the file store where the file is stored
-     */
-    public static FileStore getFileStore(Path path) throws IOException
+    /** @deprecated See CASSANDRA-16926 */
+    @Deprecated(since = "4.1")
+    public static boolean isSubDirectory(File parent, File child)
     {
-        return new SafeFileStore(Files.getFileStore(path));
+        return parent.isAncestorOf(child);
     }
 
-    /**
-     * Handle large file system by returning {@code Long.MAX_VALUE} when the size overflows.
-     * @param size returned by the Java's FileStore methods
-     * @return the size or {@code Long.MAX_VALUE} if the size was bigger than {@code Long.MAX_VALUE}
-     */
-    private static long handleLargeFileSystem(long size)
+    /** @deprecated See CASSANDRA-16926 */
+    @Deprecated(since = "4.1")
+    public static Throwable deleteWithConfirm(File file, Throwable accumulate)
     {
-        return size < 0 ? Long.MAX_VALUE : size;
+        return file.delete(accumulate, null);
+    }
+
+    /** @deprecated See CASSANDRA-16926 */
+    @Deprecated(since = "4.1")
+    public static Throwable deleteWithConfirm(File file, Throwable accumulate, RateLimiter rateLimiter)
+    {
+        return file.delete(accumulate, rateLimiter);
+    }
+
+    /** @deprecated See CASSANDRA-16926 */
+    @Deprecated(since = "4.1")
+    public static void deleteWithConfirm(String file)
+    {
+        deleteWithConfirm(new File(file));
+    }
+
+    /** @deprecated See CASSANDRA-16926 */
+    @Deprecated(since = "4.1")
+    public static void deleteWithConfirm(File file)
+    {
+        file.delete();
+    }
+
+    /** @deprecated See CASSANDRA-16926 */
+    @Deprecated(since = "4.1")
+    public static void renameWithOutConfirm(String from, String to)
+    {
+        new File(from).tryMove(new File(to));
+    }
+
+    /** @deprecated See CASSANDRA-16926 */
+    @Deprecated(since = "4.1")
+    public static void renameWithConfirm(String from, String to)
+    {
+        renameWithConfirm(new File(from), new File(to));
+    }
+
+    /** @deprecated See CASSANDRA-16926 */
+    @Deprecated(since = "4.1")
+    public static void renameWithConfirm(File from, File to)
+    {
+        from.move(to);
     }
 
     /**
@@ -696,84 +741,93 @@ public final class FileUtils
     }
 
     /**
-     * FileStore decorator used to safely handle large file system.
+     * Moves the contents of a directory to another directory.
+     * <p>Once a file has been copied to the target directory it will be deleted from the source directory.
+     * If a file already exists in the target directory a warning will be logged and the file will not
+     * be deleted.</p>
      *
-     * <p>Java's FileStore methods (getTotalSpace/getUnallocatedSpace/getUsableSpace) are limited to reporting bytes as
-     * signed long (2^63-1), if the filesystem is any bigger, then the size overflows. {@code SafeFileStore} will
-     * return {@code Long.MAX_VALUE} if the size overflow.</p>
-     *
-     * @see https://bugs.openjdk.java.net/browse/JDK-8162520.
+     * @param source the directory containing the files to move
+     * @param target the directory where the files must be moved
      */
-    private static final class SafeFileStore extends FileStore
+    public static void moveRecursively(Path source, Path target) throws IOException
     {
-        /**
-         * The decorated {@code FileStore}
-         */
-        private final FileStore fileStore;
+        logger.info("Moving {} to {}" , source, target);
 
-        public SafeFileStore(FileStore fileStore)
+        if (Files.isDirectory(source))
         {
-            this.fileStore = fileStore;
+            Files.createDirectories(target);
+
+            for (File f : new File(source).tryList())
+            {
+                String fileName = f.name();
+                moveRecursively(source.resolve(fileName), target.resolve(fileName));
+            }
+
+            deleteDirectoryIfEmpty(source);
         }
-
-        @Override
-        public String name()
+        else
         {
-            return fileStore.name();
+            if (Files.exists(target))
+            {
+                logger.warn("Cannot move the file {} to {} as the target file already exists." , source, target);
+            }
+            else
+            {
+                Files.copy(source, target, StandardCopyOption.COPY_ATTRIBUTES);
+                Files.delete(source);
+            }
         }
+    }
 
-        @Override
-        public String type()
+    /**
+     * Deletes the specified directory if it is empty
+     *
+     * @param path the path to the directory
+     */
+    public static void deleteDirectoryIfEmpty(Path path) throws IOException
+    {
+        Preconditions.checkArgument(Files.isDirectory(path), String.format("%s is not a directory", path));
+
+        try
         {
-            return fileStore.type();
+            logger.info("Deleting directory {}", path);
+            Files.delete(path);
         }
-
-        @Override
-        public boolean isReadOnly()
+        catch (DirectoryNotEmptyException e)
         {
-            return fileStore.isReadOnly();
+            try (Stream<Path> paths = Files.list(path))
+            {
+                String content = paths.map(p -> p.getFileName().toString()).collect(Collectors.joining(", "));
+
+                logger.warn("Cannot delete the directory {} as it is not empty. (Content: {})", path, content);
+            }
         }
+    }
 
-        @Override
-        public long getTotalSpace() throws IOException
+    public static int getBlockSize(File directory)
+    {
+        File f = FileUtils.createTempFile("block-size-test", ".tmp", directory);
+        try
         {
-            return handleLargeFileSystem(fileStore.getTotalSpace());
+            long bs = Files.getFileStore(f.toPath()).getBlockSize();
+            assert bs >= 0 && bs <= Integer.MAX_VALUE;
+            return (int) bs;
         }
-
-        @Override
-        public long getUsableSpace() throws IOException
+        catch (IOException e)
         {
-            return handleLargeFileSystem(fileStore.getUsableSpace());
+            throw new RuntimeException("Failed to get file block size in " + directory, e);
         }
-
-        @Override
-        public long getUnallocatedSpace() throws IOException
+        finally
         {
-            return handleLargeFileSystem(fileStore.getUnallocatedSpace());
+            f.tryDelete();
         }
+    }
 
-        @Override
-        public boolean supportsFileAttributeView(Class<? extends FileAttributeView> type)
+    public static class DuplicateHardlinkException extends RuntimeException
+    {
+        public DuplicateHardlinkException(String message)
         {
-            return fileStore.supportsFileAttributeView(type);
-        }
-
-        @Override
-        public boolean supportsFileAttributeView(String name)
-        {
-            return fileStore.supportsFileAttributeView(name);
-        }
-
-        @Override
-        public <V extends FileStoreAttributeView> V getFileStoreAttributeView(Class<V> type)
-        {
-            return fileStore.getFileStoreAttributeView(type);
-        }
-
-        @Override
-        public Object getAttribute(String attribute) throws IOException
-        {
-            return fileStore.getAttribute(attribute);
+            super(message);
         }
     }
 }
